bugfix: overflow issue when table is grow

--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -52,4 +52,5 @@
 .content {
   display: flex;
   flex: 1;
+  overflow: hidden;
 }
